# aigverse

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  UPGRADING.md  WORKFLOW.md  noxfile.py  pyproject.toml  setup.py  win-11-arm-build-error.txt
.github/: SECURITY.md  contributing.md  dependabot.yml  renovate.json5  support.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: aigverse-codeql.yml  aigverse-pypi-deployment.yml  aigverse-python-tests.yml  clang-tidy-review.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-pr-review.yml  zizmor.yml
bindings/: CMakeLists.txt
bindings/aigverse/: CMakeLists.txt  __init__.py  aigverse.cpp  aigverse.pyi  pyaigverse.pyi
bindings/aigverse/adapters/: __init__.py  networkx.py
bindings/aigverse/include/aigverse/: types.hpp
bindings/aigverse/include/aigverse/adapters/: edge_list.hpp  index_list.hpp
bindings/aigverse/include/aigverse/algorithms/: balancing.hpp  equivalence_checking.hpp  refactoring.hpp  resubstitution.hpp  rewriting.hpp  simulation.hpp
bindings/aigverse/include/aigverse/io/: read_aiger.hpp  read_pla.hpp  read_verilog.hpp  write_aiger.hpp  write_verilog.hpp
bindings/aigverse/include/aigverse/networks/: logic_networks.hpp
bindings/aigverse/include/aigverse/truth_tables/: operations.hpp  truth_table.hpp
bindings/aigverse/test/adapters/: test_edge_list.py  test_index_list.py  test_networkx.py  test_numpy.py
bindings/aigverse/test/algorithms/: test_balancing.py  test_equivalence_checking.py  test_refactoring.py  test_resubstitution.py  test_rewriting.py  test_simulation.py
bindings/aigverse/test/inout/: __init__.py  test_read_aiger.py  test_read_verilog.py  test_write_aiger.py  test_write_dot.py  test_write_verilog.py
bindings/aigverse/test/networks/: __init__.py  test_aig.py  test_fanout_aig.py  test_logic_networks.py
bindings/aigverse/test/resources/: seq.aag  test.v
bindings/aigverse/test/truth_tables/: test_truth_table.py
cmake/: AddAigversePythonBinding.cmake  Cache.cmake  CheckSubmodules.cmake  CompilerWarnings.cmake  Coverage.cmake  ExternalDependencies.cmake  Hardening.cmake  InterproceduralOptimization.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  VCEnvironment.cmake
docs/: DevelopmentGuide.md  aigs.md  algorithms.md  conf.py  consulting.md  example.v  generators.md  index.md  installation.md  machine_learning.md  mcp.md  truth_tables.md
docs/examples/: i10.aig
include/: CMakeLists.txt
include/aigverse/: types.hpp
include/aigverse/adapters/: edge_list.hpp  index_list.hpp
include/aigverse/algorithms/: balancing.hpp  equivalence_checking.hpp  refactoring.hpp  resubstitution.hpp  rewriting.hpp  simulation.hpp
include/aigverse/io/: read_aiger.hpp  read_pla.hpp  read_verilog.hpp  write_aiger.hpp  write_dot.hpp  write_verilog.hpp
include/aigverse/networks/: logic_networks.hpp
include/aigverse/truth_tables/: operations.hpp  truth_table.hpp
libs/: CMakeLists.txt
python/aigverse/: __init__.py  algorithms.pyi  generators.pyi  io.pyi  mcp_server.py  networks.pyi  stubgen.pattern  utils.pyi
python/aigverse/adapters/: __init__.py  networkx.py
python/aigverse/mcp/: __init__.py  __main__.py  cli.py  server.py
src/aigverse/: CMakeLists.txt  __init__.py  aigverse.cpp  pch.hpp  pyaigverse.pyi  types.hpp
src/aigverse/adapters/: __init__.py  edge_list.cpp  edge_list.hpp  index_list.cpp  index_list.hpp  networkx.py
src/aigverse/algorithms/: CMakeLists.txt  balancing.cpp  bindings.cpp  cleanup_dangling.cpp  equivalence_checking.cpp  refactoring.cpp  resubstitution.cpp  rewriting.cpp  simulation.cpp  transform_helpers.hpp
src/aigverse/generators/: CMakeLists.txt  arithmetic.cpp  bindings.cpp  control.cpp  random.cpp
src/aigverse/include/aigverse/algorithms/: equivalence_checking.hpp
src/aigverse/include/aigverse/io/: read_pla.hpp  write_aiger.hpp  write_dot.hpp
src/aigverse/io/: CMakeLists.txt  bindings.cpp  read_aiger.cpp  read_pla.cpp  read_verilog.cpp  write_aiger.cpp  write_dot.cpp  write_verilog.cpp
src/aigverse/networks/: CMakeLists.txt  bindings.cpp  edge_list.cpp  edge_list.hpp  graph_tensors.hpp  index_list.cpp  index_list.hpp  logic_networks.cpp
src/aigverse/truth_tables/: operations.cpp  truth_table.cpp
src/aigverse/utils/: CMakeLists.txt  bindings.cpp  truth_table.cpp  truth_table_operations.cpp
test/: conftest.py  test_import_contract.py
test/adapters/: conftest.py  test_edge_list.py  test_index_list.py  test_networkx.py  test_numpy.py
test/algorithms/: conftest.py  test_balancing.py  test_equivalence_checking.py  test_refactoring.py  test_resubstitution.py  test_rewriting.py  test_simulation.py
test/generators/: conftest.py  test_arithmetic_generators.py  test_control_generators.py  test_random_aig.py
test/inout/: test_read_aiger.py  test_read_pla.py  test_read_verilog.py  test_write_aiger.py  test_write_dot.py  test_write_verilog.py
test/mcp/: test_mcp_server.py
test/networks/: conftest.py  test_aig.py  test_aigcut.py  test_cut.py  test_cut_aig.py  test_depth_aig.py  test_fanout_aig.py  test_graph_tensors.py  test_named_aig.py  test_sequential_aig.py
test/resources/: and_with_names.aag  mux21.aig  test.pla  test.v
test/truth_tables/: conftest.py  test_truth_table.py
tools/: __init__.py  import_crash_diagnostics.py  runtime_crash_diagnostics.py
