[build-system]
requires = [
    "scikit-build-core>=0.10.1",
    "setuptools-scm>=8.1"
]
build-backend = "scikit_build_core.build"

[project]
name = "aigverse"
description = "A Python library for working with logic networks, synthesis, and optimization."
readme = "README.md"
authors = [
    { name = "Marcel Walter", email = "marcel.walter@tum.de" }
]
keywords = ["aigverse", "logic", "synthesis", "AIG", "EDA", "optimization", "machine learning", "artificial intelligence"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed"
]

requires-python = ">=3.9"

dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=7.2", "aigverse"]

[project.urls]
Source = "https://github.com/marcelwa/aigverse"
Tracker = "https://github.com/marcelwa/aigverse/issues"
Documentation = "https://aigverse.readthedocs.io/en/latest/"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Set the wheel install directory
wheel.install-dir = "aigverse"
# Set required Ninja version
ninja.version = ">=1.10"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"
# Explicitly set the package directory
wheel.packages = ["bindings/aigverse"]
# Only build the Python bindings target
build.targets = ["pyaigverse"]
# Only install the Python package component
install.components = ["aigverse_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["bindings/aigverse/_version.py"]
sdist.exclude = [
    "**/.git",
    "**/.github",
    "**/app",
    "**/apps",
    "**/css",
    "**/html",
    "**/doc",
    "**/benchmark",
    "**/benchmarks",
    "**/experiment",
    "**/experiments",
    "**/examples",
    "**/include",
    "**/libs",
    "**/cmake-build-**",
    "**/docs",
    "**/plots",
    "**/test",
    "**/tests",
    "**/nauty",
    "**.cpp",
    "**.hpp",
    "**.pdf",
    "**.ans",
    "**.out",
    "**.log",
    "**.xml",
    "**CMakeList.txt",
    "**__pycache__"
]

[tool.scikit-build.cmake.define]
MOCKTURTLE_EXAMPLES = "OFF"
AIGVERSE_ENABLE_IPO = "ON"
AIGVERSE_ENABLE_PCH = "ON"
AIGVERSE_ENABLE_UNITY_BUILD = "ON"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.check-sdist]
sdist-only = ["bindings/aigverse/_version.py"]
git-only = [
    "docs/*",
    "libs/*",
    "test/*",
    ".idea/*",
]
default-ignore = true
mode = "git"
build-backend = "auto"


[tool.setuptools_scm]
write_to = "bindings/aigverse/_version.py"


[tool.pytest.ini_options]
minversion = "7.2"
testpaths = ["bindings/aigverse/test"]
addopts = ["-ra", "--strict-markers", "--strict-config", "--showlocals"]
log_cli_level = "INFO"
xfail_strict = true


[tool.cibuildwheel]
build = "cp3*"
archs = "auto64"
skip = "*-musllinux*"
test-command = "python -c \"from aigverse import Aig\""
build-frontend = "build[uv]"
free-threaded-support = true
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
environment = { CMAKE_GENERATOR = "Ninja" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }


[tool.uv]
required-version = ">=0.5.20"
reinstall-package = ["aigverse"]

[tool.uv.sources]
aigverse = { workspace = true }


[tool.mypy]
files = ["bindings/aigverse/", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/bindings"]
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true


[tool.ruff]
line-length = 120
preview = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "C90", # <...> too complex
    "COM812", # Conflicts with formatter
    "CPY001", # Missing copyright notice at top of file
    "FBT003", # Boolean positional value in function call
    "ISC001", # Conflicts with formatter
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101", # Use of assert detected
    "S404", # `subprocess` module is possibly insecure
    "TID252", # Prefer absolute imports over relative imports from parent modules
    "S301", # pickle can be insecure
    "S403", # pickle can be insecure
]

isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"bindings/aigverse/test/**" = ["T20", "ANN", "D"]
"docs/**" = ["T20", "ERA001", "INP001"]
"noxfile.py" = ["T20", "TID251", "ERA001"]
"*.pyi" = ["D418", "PYI021"]  # pydocstyle
"*.ipynb" = [
    "D", # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[dependency-groups]
build = [
    "scikit-build-core>=0.11.0",
    "setuptools-scm>=8.1",
]
docs = [
    "furo>=2024.8.6",
    "myst-nb>=1.1.2",
    "setuptools-scm>=8.1",
    "sphinx-autoapi>=3.3.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-svg2pdfconverter>=1.2.3",
    "sphinxext-opengraph>=0.9.1",
    "breathe>=4.36.0",
    "sphinx>=7.4.7",
    "sphinx>=8.1.3; python_version >= '3.10'",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "networkx>=3.0.0",
    "matplotlib>=3.0.0",
]
test = [
    "pytest>=8.3.3",
    "pytest-console-scripts>=1.4.1",
    "pytest-cov>=6",
]
dev = [
    { include-group = "build" },
    { include-group = "docs" },
    { include-group = "test" },
]
