[build-system]
requires = [
    "scikit-build-core>=0.10.1",
    "setuptools-scm>=8.1",
    "pybind11>=2.13.6,<3",
]
build-backend = "scikit_build_core.build"

[project]
name = "aigverse"
description = "A Python library for working with logic networks, synthesis, and optimization."
readme = "README.md"
authors = [
    { name = "Marcel Walter", email = "marcel.walter@tum.de" }
]
keywords = ["aigverse", "logic", "synthesis", "AIG", "EDA", "optimization", "machine learning", "artificial intelligence"]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed"
]

requires-python = ">=3.10"

dynamic = ["version"]

[project.optional-dependencies]
adapters = ["networkx>=3.0.0", "numpy>=1.23.0"]

[project.urls]
Source = "https://github.com/marcelwa/aigverse"
Tracker = "https://github.com/marcelwa/aigverse/issues"
Documentation = "https://aigverse.readthedocs.io/en/latest/"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
# Set the wheel install directory
wheel.install-dir = "aigverse"
# Set required Ninja version
ninja.version = ">=1.10"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"
# Explicitly set the package directory
wheel.packages = ["python/aigverse"]
# Only build the Python bindings target
build.targets = ["aigverse-networks", "aigverse-algorithms", "aigverse-io", "aigverse-utils"]
# Only install the Python package component
install.components = ["aigverse_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/aigverse/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/test",
]

[tool.check-sdist]
sdist-only = ["python/aigverse/_version.py"]
git-only = [
    "docs/*",
    "test/*",
    ".idea/*",
]
default-ignore = true
mode = "git"
build-backend = "auto"


[tool.scikit-build.cmake.define]
MOCKTURTLE_EXAMPLES = "OFF"
AIGVERSE_ENABLE_IPO = "ON"
AIGVERSE_ENABLE_PCH = "ON"
AIGVERSE_ENABLE_UNITY_BUILD = "ON"

[[tool.scikit-build.overrides]]
if.abi-flags = "t"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.setuptools_scm]
write_to = "python/aigverse/_version.py"


[tool.pytest]
minversion = "9.0"
strict = true
addopts = [
    "-ra",
    "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
log_level = "INFO"
testpaths = ["test/"]


[tool.cibuildwheel]
build = "cp3*"
enable = ["cpython-freethreading"]
archs = "auto64"
skip = "*-musllinux*"
test-command = "python -c \"from aigverse.networks import Aig\""
build-frontend = "build[uv]"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
environment = { CMAKE_GENERATOR = "Ninja" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }


[tool.uv]
required-version = ">=0.5.20"
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
    { file = "src/**/*.cpp" },
    { file = "python/**/*.py" },
]

[tool.uv.sources]
aigverse = { workspace = true }


[tool.mypy]
files = ["python/aigverse/", "test/", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/python"]
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true


[tool.ruff]
line-length = 120
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python", "test", "docs"]
exclude = ["*_version.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90", # <...> too complex
    "COM812", # Conflicts with formatter
    "CPY001", # Missing copyright notice at top of file
    "FBT003", # Boolean positional value in function call
    "ISC001", # Conflicts with formatter
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "PLC0415", # Import should be at top of file
    "S101", # Use of assert detected
    "S404", # `subprocess` module is possibly insecure
    "TID252", # Prefer absolute imports over relative imports from parent modules
    "S301", # pickle can be insecure
    "S403", # pickle can be insecure
    "PYI002", # strictly static pyi interface
]
future-annotations = true

isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"python/aigverse/__init__.py" = ["RUF067"]
"test/**" = ["T20", "ANN", "D", "INP001"]
"docs/**" = ["T20", "ERA001", "INP001"]
"noxfile.py" = ["T20", "TID251", "ERA001"]
"*.pyi" = ["D418", "PYI021"]
"*.ipynb" = [
    "D", # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true


[dependency-groups]
build = [
    "scikit-build-core>=0.11.0",
    "setuptools-scm>=8.1",
    "pybind11>=2.13.6,<3",
]
adapters = [
    "networkx>=3.0.0",
    "numpy>=1.23.0",
]
docs = [
    { include-group = "adapters" },
    "furo>=2024.8.6",
    "myst-nb>=1.1.2",
    "setuptools-scm>=8.1",
    "sphinx-autoapi>=3.3.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-svg2pdfconverter>=1.2.3",
    "sphinxext-opengraph>=0.9.1",
    "sphinx>=8.1.3",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "matplotlib>=3.0.0",
    "pygraphviz>=1.9.0",
]
test = [
    { include-group = "adapters" },
    "pytest>=9.0.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]
dev = [
    { include-group = "build" },
    { include-group = "adapters" },
    { include-group = "docs" },
    { include-group = "test" },
    "nox>=2025.10.16",
]
